<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar3_hardware_driver</name>
  <version>0.0.1</version>
  <description>AR3 driver for encoder, limit switch, and motor driver serial communications.</description>
  <maintainer email="kevin@kevindemarco.com">Kevin DeMarco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libboost-dev</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
