<?xml version="1.0"?>
<package format="3">
  <name>ar3_moveit_config</name>
  <version>0.7.0</version>
  <description>
    <p>
      moveit2 configuration files for AR3
    </p>
  </description>
  <author email="kevin@kevindemarco.com">Kevin DeMarco</author>
  <maintainer email="kevin@kevindemarco.com">Kevin DeMarco</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ar3_description</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
